// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`CLI > should output the help 1`] = `
"repo-tools <command>

Commands:
  repo-tools check-remote      Check if repo has remote commits
  repo-tools install-packages  Run \`npm install\` if package.json has
                               changed

Options:
  --help     Show help                                         [boolean]
  --version  Show version number                               [boolean]"
`;

exports[`CLI > should output the help for invalid commands 1`] = `
"repo-tools <command>

Commands:
  repo-tools check-remote      Check if repo has remote commits
  repo-tools install-packages  Run \`npm install\` if package.json has
                               changed

Options:
  --help     Show help                                         [boolean]
  --version  Show version number                               [boolean]

Unknown argument: command"
`;
